testsuite/tests/linear/should_fail/LinearTHFail3.hs
{-# LANGUAGE GADTs #-}
{-# LANGUAGE LinearTypes #-}
{-# LANGUAGE TemplateHaskell #-}

module LinearTHFail3 where

$([d| data T where { MkT :: Int %m -> T } |])
