testsuite/tests/linear/should_fail/LinearTHFail3.stderr

LinearTHFail3.hs:7:2: error:
    Non-linear fields in data constructors not (yet) handled by Template Haskell
